# AoC

./: .gitignore  makefile  pyproject.toml
AoC15/: Day1.py  Day10.py  Day12.py  Day2.py  Day3.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py
AoC19/: Day1.py  Day2.py  Day3.py  Day5.py  Day6.py  Day7.py
AoC22/: .gitignore  Day1.py  Day10.py  Day11.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py
AoC23/: Day1.py  Day2.py  Day4.py  Day6.py
adventofcode/AoC15/: Day1.py  Day10.py  Day12.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py
adventofcode/AoC19/: Day1.py  Day10.py  Day11.py  Day12.py  Day14.py  Day16.py  Day2.py  Day24.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py  playground.py
adventofcode/AoC20/: Day1.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day16.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py  leaderboard.py  playground.py
adventofcode/AoC20/helpers/: AoCHelper.py
adventofcode/AoC21/: Day1.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day16.py  Day17.py  Day18.py  Day2.py  Day21.py  Day3.py  Day4.py  Day5.py  Day7.py  Day8.py  Day9.py
adventofcode/AoC21/helpers/: AoCHelper.py  GlobalVariables.py
adventofcode/AoC22/: Day1.py  Day10.py  Day11.py  Day2.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py
adventofcode/AoC23/: Day1.py  Day10.py  Day11.py  Day12.py  Day13.py  Day15.py  Day19.py  Day2.py  Day21.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py
adventofcode/helpers/: AoCHelper.py
helpers/: AoCHelper.py
tests/AoC23/: test_day_10.py  test_day_12.py  test_day_2.py  test_day_3.py  test_day_6.py  test_day_7.py
tests/helpers/: test_aoc_helper.py
