[tool.poetry]
name = "AdventOfCode"
version = "0.1.0"
description = "Solutions to Advent of Code puzzles"
authors = ["Andreas Midjord <midjord.andreas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
regex = "^2023.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
